--- a/nakamura/styles.css
+++ b/nakamura/styles.css
@@ -1,17 +1,17 @@
 h1 {
-    color: #6594e0;/*文字色*/
+    color: #ffd78d;/*文字色*/
     /*線の種類（点線）2px 線色*/
-    border-bottom: dashed 2px #6594e0;
+    border-bottom: dashed 2px #97c2ff;
 }
 h2 {
-    color: #364e96;/*文字色*/
-    border: solid 3px #364e96;/*線色*/
+    color: #ffd78d;/*文字色*/
+    border: solid 3px #97c2ff;/*線色*/
     padding: 0.5em;/*文字周りの余白*/
     border-radius: 0.5em;/*角丸*/
 }
 h3 {
     padding: 0.4em 0.5em;/*文字の上下 左右の余白*/
-    color: #494949;/*文字色*/
+    color: #ffd78d;/*文字色*/
     background: #8787ce;/*背景色*/
     border-left: solid 5px #64a2db;/*左線*/
     border-bottom: solid 3px #bbdbfa;/*下線*/
@@ -24,7 +24,7 @@ html body{
     padding: 0.5em 1em;
     margin: 2em 0;
     background: #15151e;
-    border: dashed 2px #5b8bd0;/*点線*/
+    border: dashed 2px #97c2ff;/*点線*/
 }
 .schoolInformation  h3{
     margin: 0; 
