画像などを真ん中に

--- a/junki/styles.css
+++ b/junki/styles.css
@@ -20,6 +20,11 @@ html body{
     width: 800px;
     margin:auto;
 }
+
+header {
+    text-align: center;
+}
+
 .schoolInformation {
     padding: 0.5em 1em;
     margin: 2em 0;
