--- a/homepage/cs_s.css
+++ b/homepage/cs_s.css
@@ -1,3 +1,30 @@
+h1 {
+    position: relative;
+    padding: 0.5em;
+    background: #a6d3c8;
+    color: white;
+  }
+  
+  h1::before {
+    position: absolute;
+    content: '';
+    top: 100%;
+    left: 0;
+    border: none;
+    border-bottom: solid 15px transparent;
+    /*order-right: solid 20px rgb(149, 158, 155);*/
+  }
+  .navbar {
+    display: flex;
+    background-color: #a6d3c8;
+    justify-content: space-around;
+  }
+  .navbar a {
+    color: white;
+    padding: 14px 20px;
+    text-decoration: none;
+    text-align: center;
+  }
 .schools {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
