--- a/homepage/cs_s.css
+++ b/homepage/cs_s.css
@@ -25,6 +25,10 @@ h1 {
     text-decoration: none;
     text-align: center;
   }
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
 .schools {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
